--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -14,6 +14,7 @@
 }
 .dashboard-date-picker {
   float: left;
+  margin-left: 10px;
 }
 .dashboard-section-wrapper {
   @include clearfix();
